music control code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
 		<link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
-		<link href="https://raw.githubusercontent.com/laughin1/bootstrap-player/master/css/bootstrap-player.css" rel="stylesheet">
+		<link href="css/bootstrap-player.css" rel="stylesheet">
 	</head>
 	<body>
 		<section class="container">
@@ -32,6 +32,6 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.min.js"></script>
 		<script src="https://raw.githubusercontent.com/fryn/html5slider/gh-pages/html5slider.js"></script>
-		<script src="https://github.com/laughin1/bootstrap-player/blob/master/js/bootstrap-player.js"></script>
+		<script src="js/bootstrap-player.js"></script>
 	</body>
 </html>
